# theme-my-fox

./: ThemeMyFox.py  commit_pipeline.fish  pyproject.toml
theme_my_fox/: core.py
