[project]
name = "theme-my-fox"
version = "4.4.0"
description = "Firefox theme helper library"
authors = [
    {name = "Deepfriedduck", email = "deepfriedduck.opensourceapis@gmail.com"},
]
dependencies = ["lz4>=4.4.5"]
requires-python = ">3.11,<4"
readme = "README.md"
license = { file = "LICENSE" }


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
